kustomizations/media/suwayomi/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: suwayomi
  annotations:
    external-dns.alpha.kubernetes.io/hostname: suwayomi.lan
  labels:
    app: suwayomi
    app.kubernetes.io/name: suwayomi
spec:
  selector:
    app: suwayomi
  ports:
  - name: http
    port: 4567
    targetPort: 4567
  - name: web
    port: 8181
    targetPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: suwayomi-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: suwayomi.lan
  labels:
    app.kubernetes.io/name: suwayomi
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.23
  selector:
    app.kubernetes.io/name: suwayomi
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 4567
  - name: web
    protocol: TCP
    port: 8181
    targetPort: 8181
