kustomizations/media/suwayomi/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suvayomi
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: suvayomi.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: suvayomi
              port:
                number: 4567
